# Material-Stream-Identification-System

./: .gitignore  main_train.py  pyproject.toml
deployment/: app.py  dummy_pickle_generator.py  requirements.txt
deployment/camera/: camera.py
deployment/feature_extraction/: extractor.py
deployment/inference/: predictor.py
docs/: 01_PROJECT_OVERVIEW.md  02_PHASE_1_AUGMENTATION.md  03_PHASE_2_FEATURES.md  04_PHASE_3_TRAINING.md  05_MODELS_MANUAL.md  06_API_REFERENCE.md  README.md  Report.tex
saved_models/: knn_config.json  svm_config.json
src/: __init__.py  augmentation.py  feature_analysis_helper.py  phase2_feature_extraction.py  svm_analysis_helper.py  svm_training.py
src/models/: __init__.py  knn_analysis_helper.py  knn_training.py  svm_analysis.py  svm_training.py  unified_predictor.py
src/pipeline/: __init__.py  feature_analysis.py
src/preprocessing/: __init__.py  augmentation.py  feature_extractor.py
