[project]
name = "msi-system"
version = "0.1.0"
description = "ML Project"
authors = [
    {name = "YassenAli",email = "144853147+YassenAli@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python =  ">=3.12,<3.15"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "numpy (<2.3.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
